RESOLVED FIXED120014
REGRESSION(r154268): Some stylesheet media attribute tests failing
https://bugs.webkit.org/show_bug.cgi?id=120014
Summary REGRESSION(r154268): Some stylesheet media attribute tests failing
Antti Koivisto
Reported 2013-08-19 10:27:49 PDT
[23/96] fast/media/media-query-serialization.html failed unexpectedly (text diff) [39/96] fast/media/mq-invalid-media-feature-01.html failed unexpectedly (reference mismatch) [52/96] fast/media/mq-js-stylesheet-media-01.html failed unexpectedly (reference mismatch) [53/96] fast/media/mq-js-stylesheet-media-02.html failed unexpectedly (reference mismatch) [54/96] fast/media/mq-js-stylesheet-media-03.html failed unexpectedly (reference mismatch) etc
Attachments
patch (1.75 KB, patch)
2013-08-19 10:31 PDT, Antti Koivisto
no flags
slightly better version (1.77 KB, patch)
2013-08-19 10:36 PDT, Antti Koivisto
mitz: review+
Antti Koivisto
Comment 1 2013-08-19 10:31:02 PDT
Antti Koivisto
Comment 2 2013-08-19 10:36:21 PDT
Created attachment 209102 [details] slightly better version
mitz
Comment 3 2013-08-19 10:39:45 PDT
Comment on attachment 209102 [details] slightly better version View in context: https://bugs.webkit.org/attachment.cgi?id=209102&action=review > Source/WebCore/ChangeLog:10 > + Always set the media on InlineStyleSheetOwner. Weird indentation
Antti Koivisto
Comment 4 2013-08-19 10:42:05 PDT
Zan Dobersek
Comment 5 2013-08-19 10:50:23 PDT
*** Bug 120011 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.